--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
 	"cSpell.words": [
-		"Browsershot"
+		"autoprefix",
+		"browserless",
+		"Browsershot",
+		"googletagmanager",
+		"networkidle",
+		"pageerror"
 	]
 }
