--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "scripts": {
     "pretest": "npm run lint",
-    "test": "c8 npm run quick:test",
-    "quick:test": "node --loader=ts-node/esm --enable-source-maps bin/test.ts",
+    "c8:test": "c8 npm run test",
+    "test": "node --loader=ts-node/esm --enable-source-maps bin/test.ts",
     "clean": "del-cli build",
     "typecheck": "tsc --noEmit",
     "precompile": "npm run lint && npm run clean",
@@ -38,9 +38,13 @@
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@japa/assert": "^2.0.1",
+    "@japa/expect": "^3.0.1",
+    "@japa/file-system": "^2.1.1",
     "@japa/runner": "^3.0.5",
     "@swc/core": "^1.3.99",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^20.9.3",
+    "@types/tmp": "^0.2.6",
     "c8": "^8.0.1",
     "del-cli": "^5.1.0",
     "eslint": "^8.54.0",
@@ -89,7 +93,8 @@
     ],
     "all": true,
     "include": [
-      "src/**"
+      "src/**",
+      "!src/types.ts"
     ]
   },
   "directories": {
@@ -106,5 +111,11 @@
     "dts": false,
     "sourcemap": true,
     "target": "esnext"
+  },
+  "dependencies": {
+    "dot-prop": "^8.0.2",
+    "mime-types": "^2.1.35",
+    "puppeteer": "^21.7.0",
+    "tmp": "^0.2.1"
   }
 }
