--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -4,30 +4,8 @@ on:
   - pull_request
 
 jobs:
-  test_linux:
+  test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.16.0, 20.x]
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run tests
-        run: npm test
-
-  test_windows:
-    if: ${{ !inputs.disable-windows }}
-    runs-on: windows-latest
     strategy:
       matrix:
         node-version: [18.16.0, 20.x]
