build: change build to esm and cjs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "autoprefix",
     "browserless",
     "Browsershot",
+    "dset",
     "googletagmanager",
     "networkidle",
     "pageerror"
