build: fix build and tests to the new version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,16 @@
 {
   "extends": "@adonisjs/tsconfig/tsconfig.package.json",
   "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "sourceMap": true,
     "rootDir": "./",
     "outDir": "./build",
-    "lib": ["ESNext", "DOM"]
+    "lib": [
+      "ESNext",
+      "DOM"
+    ]
   }
 }
