--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "pretest": "npm run lint",
     "c8:test": "c8 npm run test",
-    "test": "node --loader=ts-node/esm --enable-source-maps bin/test.ts",
+    "test": "node -r ts-node/register bin/test.ts",
     "clean": "del-cli build",
     "typecheck": "tsc --noEmit",
     "precompile": "npm run lint && npm run clean",
@@ -44,6 +44,7 @@
     "@japa/assert": "1.4.1",
     "@japa/expect": "2.0.2",
     "@japa/file-system": "1.1.0",
+    "@japa/spec-reporter": "1.3.3",
     "@japa/runner": "2.5.1",
     "@swc/core": "^1.3.99",
     "@types/mime-types": "^2.1.4",
